--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,12 @@ dependencies {
     implementation 'io.quarkus:quarkus-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'io.quarkus:quarkus-arc'
+    implementation("io.quarkus:quarkus-messaging-amqp")
+    implementation("io.quarkus:quarkus-smallrye-fault-tolerance")
+
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
+
 }
 
 group 'com.jurocknsail'
